Closed
Bug 682073
Opened 14 years ago
Closed 14 years ago
AndroidBridge uses wrong method for calling setClipboardText
Categories
(Core Graveyard :: Widget: Android, defect)
Tracking
(firefox7 fixed, firefox8 fixed, firefox9 fixed, fennec7+)
VERIFIED
FIXED
mozilla7
People
(Reporter: mfinkle, Assigned: mfinkle)
References
Details
(Whiteboard: [qa-])
Attachments
(1 file)
1.57 KB,
patch
|
dougt
:
review+
asa
:
approval-mozilla-aurora+
asa
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
In the AndroidBridge, we use CallStaticObjectMethod when calling setClipboardText and we should use CallStaticVoidMethod:
http://mxr.mozilla.org/mozilla-central/source/widget/src/android/AndroidBridge.cpp#542
http://mxr.mozilla.org/mozilla-central/source/widget/src/android/AndroidBridge.cpp#563
Attachment #555820 -
Flags: review?(doug.turner)
Updated•14 years ago
|
Attachment #555820 -
Flags: review?(doug.turner) → review+
Updated•14 years ago
|
Assignee: nobody → mark.finkle
tracking-fennec: --- → ?
OS: Linux → Android
Hardware: x86 → All
Assignee | ||
Comment 1•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 2•14 years ago
|
||
Comment on attachment 555820 [details] [diff] [review]
patch
Very simple Android-only, low-risk fix. Prevents crashes during tests and possibly an know crasher from the field (bug 676341).
Attachment #555820 -
Flags: approval-mozilla-beta?
Attachment #555820 -
Flags: approval-mozilla-aurora?
Updated•14 years ago
|
Attachment #555820 -
Flags: approval-mozilla-beta?
Attachment #555820 -
Flags: approval-mozilla-beta+
Attachment #555820 -
Flags: approval-mozilla-aurora?
Attachment #555820 -
Flags: approval-mozilla-aurora+
Assignee | ||
Comment 4•14 years ago
|
||
http://hg.mozilla.org/releases/mozilla-aurora/rev/b27ee056fe19
http://hg.mozilla.org/releases/mozilla-beta/rev/5c18cbeb7da5
tracking-fennec: ? → 7+
status-firefox7:
--- → fixed
status-firefox8:
--- → fixed
status-firefox9:
--- → fixed
Target Milestone: --- → mozilla7
Verified: see comment:
https://bugzilla.mozilla.org/show_bug.cgi?id=682734#c4
Status: RESOLVED → VERIFIED
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•