Bug 682073 - AndroidBridge uses wrong method for calling setClipboardText [r=dougt, a=asa]